Updated Project page to have correct leaders displayed, Fixed calendar rsvp links to be visible
Removed Spiro and Luis from the board page
Added the correct leaders on the Project Page
RSVP links should be visible when clicking on an event on the calendar page.

--- a/src/components/calendar/EventModal.css
+++ b/src/components/calendar/EventModal.css
@@ -47,6 +47,9 @@
     color: white;
 }
 
+a{
+	color: white !important;
+}
 @media only screen and (max-width: 420px){
     .event-modal-paragraph {
         /* font-size: .7rem; */
