--- a/src/components/membership/membership.css
+++ b/src/components/membership/membership.css
@@ -122,10 +122,6 @@
 	background-color: teal !important;
 }
 
-a{
-	color: black !important;
-}
-
 .nav-item{
 	color:white !important;
 
